[package]
name = "quickssh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
clap = { version = "4.4.11", features = ["derive"] }
env_logger = "0.10.1"
futures = "0.3.29"
log = "0.4.20"
pty-process = { git = "https://github.com/mobusoperandi/pty-process.git", branch = "macos_draft_pr", features = ["async"] }
russh = "0.40.1"
russh-keys = "0.40.1"
russh-sftp = "1.2.1"
tokio = { version = "1.34.0", features = ["rt-multi-thread"] }
users = "0.11.0"
xdg = "2.5.2"
